Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-81296

Qt configured with -no-opengl doesn't build

XMLWordPrintable

    • Linux/Yocto
    • 39c614bed375d67f796d1519ebd2997060f81a0b (qt/qtdeclarative/5.14) ddeffeed1d933b6513f18533a9186e9f472da117 (qt/qtdeclarative/5.12)

      Qt configured as following doesn't build:

      /configure -commercial -optimize-size -v -nomake tests  -nomake examples -no-pch -no-xcb -no-opengl -no-gstreamer -no-pulseaudio -skip qt3d -skip qtactiveqt  -skip qtandroidextras  -skip qtcanvas3d  -skip qtconnectivity -skip qtdatavis3d -skip qtdoc  -skip qtgamepad  -skip qtlocation  -skip qtmacextras  -skip qtnetworkauth -skip qtpurchasing  -skip qtremoteobjects  -skip qtscript  -skip qtscxml  -skip qtsensors -skip qtserialbus -skip qtspeech  -skip qtwayland  -skip qtwebchannel  -skip qtwebengine  -skip qtwebsockets -skip qtwebview  -skip qtwinextras  -skip qtx11extras  -skip qtxmlpatterns -no-feature-printer -no-feature-cups -no-feature-d3d12 -no-feature-ftp -no-feature-networkproxy -no-feature-quick-particles -no-feature-quick-shadereffect -no-feature-quick-sprite -no-feature-quickcontrols2-material -no-feature-quickcontrols2-universal -no-feature-quickcontrols2-fusion -no-feature-quicktemplates2-hover -no-feature-quicktemplates2-multitouch -confirm-license -device linux-imx6-g++ -device-option CROSS_COMPILE=/home/kapinter/Qt/5.12.2/Boot2Qt/apalis-imx6/toolchain/sysroots/x86_64-pokysdk-linux/usr/bin/arm-poky-linux-gnueabi/arm-poky-linux-gnueabi- -sysroot /home/kapinter/Qt/5.12.2/Boot2Qt/apalis-imx6/toolchain/sysroots/cortexa9hf-neon-poky-linux-gnueabi -nomake tests -nomake examples -skip qttools -skip qttranslations -skip qtserialport -skip qtsvg -skip qtserialbus; make -j8
      

      so Qt declarative fails with shape and QSGTexture.

      The attached patch solves the build issues.

        1. no-opengl.patch
          1 kB
          Karim Pinter
        For Gerrit Dashboard: QTBUG-81296
        # Subject Branch Project Status CR V

            karimpinter Karim Pinter
            karimpinter Karim Pinter
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes